# qstruct

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  REPOSITORY_ANALYSIS.md  ROADMAP.md  mkdocs.yml  pyproject.toml
.claude/: plan.md  quality.md
.github/workflows/: adr-create.md  rhiza_benchmarks.yml  rhiza_docker.yml  rhiza_link_check.yml  rhiza_paper.yml
.gitlab/: COMPARISON.md  README.md  TESTING.md
.gitlab/template/: marimo_job_template.yml.jinja
.gitlab/workflows/: rhiza_license.yml  rhiza_marimo.yml  rhiza_release.yml  rhiza_semgrep.yml  rhiza_sync.yml  rhiza_validate.yml
.rhiza/: INDEX.md  template-bundles.yml  template.yml
docker/: Dockerfile
docs/: CHANGELOG_GUIDE.md  DEPENDENCIES.md  DOCKER.md  EXTENDING_RHIZA.md  PROJECT_BOARD.md  SECURITY_TESTING.md  TECHNICAL_DEBT.md  TOOLS_REFERENCE.md  VSCODE_EXTENSIONS.md  index.md
docs/adr/: 0001-use-architecture-decision-records.md  0002-use-uv-for-python-package-management.md  0003-use-ruff-for-linting-and-formatting.md  0004-adopt-modular-makefile-architecture.md  0005-separate-rhiza-template-from-cli.md  0006-organise-templates-into-bundles.md  0007-support-dual-cicd-github-and-gitlab.md  0008-use-marimo-for-interactive-notebooks.md  0009-use-pre-commit-hooks-for-code-quality.md  README.md
paper/: rhiza.tex
src/qstruct/: __init__.py  core.py
tests/: README.md  test_core.py
tests/property/: conftest.py  test_makefile_properties.py
tests/stress/: README.md  conftest.py  test_stress.py
