[project]
name = "qstruct"
version = "0.8.16"
description = "Quantitative Structuring"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Mark Richardson" }
]
keywords = ["templates", "configuration", "ci", "ruff"]
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "chebfun>=0.0.0,<1.0",   # Chebfun for numerical computing (v0.x for stability, 1.0+ may have breaking changes)
]

[dependency-groups]
dev = [
    "marimo>=0.18.0,<1.0",   # Reactive notebook runtime for book/ examples (v0.18+ for streaming, <1.0 for API stability)
    "numpy>=2.4.0,<3.0",     # Numerical computing for notebook data analysis (v2.4+ includes 2.0 improvements, <3.0 avoids breaking changes)
    "plotly>=6.5.0,<7.0",    # Interactive visualization in notebooks (v6.5+ mature features, <7.0 for API stability)
    "pandas>=3,<3.1",        # Data manipulation for notebook examples (v3+ for modern APIs, <3.1 conservative after major release)
    "pyyaml>=6.0,<7.0",      # YAML parsing for validation scripts (v6+ for security fixes, <7.0 for API stability)
    # See docs/DEPENDENCIES.md for detailed version rationale
]

[project.urls]
Homepage = "https://github.com/markrichardson/qstruct"
Repository = "https://github.com/markrichardson/qstruct"
Issues = "https://github.com/markrichardson/qstruct/issues"

[tool.deptry.package_module_name_map]
chebfun = "chebpy"
marimo = "marimo"
numpy = "numpy"
plotly = "plotly"
pandas = "pandas"
pyyaml = "yaml"

[tool.ty.environment]
python-version = "3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qstruct"]

